--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
         </li>
       </ul>
     </footer>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
